--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,4 @@
+@import '../../apps/Mail/assets/css/mail-style.css';
 * {
     box-sizing: border-box;
 }
@@ -43,7 +44,18 @@ body {
 .aside-bar {
     background-color: beige;
     flex: 0 0 25%;
-    /* height: 100%; */
+}
+
+.aside-ul {
+    height: 50%;
+    width: 100%;
+}
+
+.aside-ul li {
+    text-align: center;
+    width: 100%;
+    font-size: 1.5rem;
+    border-bottom: 3px solid black;
 }
 
 /* Helpers  */
