--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,6 +10,10 @@ html {
 }
 
 body {
+    background-image: url(../img/537158-PJJ1A8-827.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
     margin: 0;
     height: 100%;
 }
@@ -23,7 +27,7 @@ body {
 }
 
 .main {
-    height: 100%;
+    height: 90%;
 }
 
 /* main-nav */
@@ -33,11 +37,27 @@ body {
     border-bottom: 1px solid black;
 }
 
+.logo{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #0e9aa7;
+    font-size: 2.5rem;
+    font-style: italic;
+}
+
+.logo span{
+    font-weight: bold;
+    color: #fe8a71; 
+}
+
 .nav-links {
     width: 30%;
 }
 
 .nav-links>* {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1.8rem;
+    color: #0e9aa7;
+    font-weight: bold;
     text-decoration: none;
 }
 
