--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,29 +23,31 @@
     font-family: Dancing;
     src: url(../font/DancingScript-Regular.ttf);
 }
+
 @font-face {
     font-family: Cutiv-mono;
     src: url(../font/CutiveMono-Regular.ttf);
 }
-
 
 html {
     height: 100vh;
 }
 
 body {
-    background-image: url(../img/bgi.jpeg);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
     margin: 0;
     height: 100%;
 }
 
 /* HomePage  */
-.main-home{
+
+.main-home {
+    background-image: url(../img/bgi.jpeg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
     width: 100%;
 }
+
 .logo-imgs {
     flex-wrap: wrap;
     width: 100%;
@@ -82,17 +84,16 @@ body {
     border-bottom: 1px solid black;
 }
 
-.logo{
-
+.logo {
     font-family: Marck-script, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: #0e9aa7;
     font-size: 2.5rem;
     font-style: italic;
 }
 
-.logo span{
+.logo span {
     font-weight: bold;
-    color: #fe8a71; 
+    color: #fe8a71;
 }
 
 .nav-links {
@@ -110,20 +111,27 @@ body {
 /* Aside-bar */
 
 .aside-bar {
-    background-color: beige;
     flex: 0 0 25%;
+    border-right: 1px solid #ccc;
 }
 
-.aside-ul {
+.aside-bar-content {
     height: 50%;
-    width: 100%;
+    width: 80%;
 }
 
-.aside-ul li {
+.aside-main-nav {
     text-align: center;
     width: 100%;
+    height: 70%;
     font-size: 1.5rem;
-    border-bottom: 3px solid black;
+}
+
+.aside-main-nav>* {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    cursor: pointer;
 }
 
 /* Helpers  */
