--- a/apps/Keep/assets/css/keep-style.css
+++ b/apps/Keep/assets/css/keep-style.css
@@ -1,56 +1,169 @@
-.keep-list {
-    flex-flow: wrap;
+@import "./Modal.css";
+
+button {
+  outline: none;
 }
 
-.keep-list>* {
-    margin: 5px;
-    flex-flow: wrap;
+.keep-list {
+  columns: 3;
+  max-width: 1080px;
+  column-gap: 1em;
+}
+
+.keep-list > * {
+  margin: 5px;
+  margin: 30px;
+  display: inline-block;
+  margin: 0 0 1em;
+  width: 100%;
+}
+
+video {
+  width: 100%;
 }
 
 .keep-preview {
-    padding: 10px;
-    min-width: 200px;
-    border-radius: 5px;
+  border-radius: 5px;
+  box-shadow: 1px 3px 5px #7d7f80;
+  position: relative;
+  transition: 0.4s;
+  padding: 30px;
+  cursor: pointer;
+  margin-bottom: 30px;
+  width: 100%;
 }
 
-.keeps-container {}
+.keep-preview:hover {
+  opacity: 0.8;
+}
+
+.keep-preview.img {
+  height: 15rem;
+}
+
+.keep-preview img {
+  width: 90%;
+  height: 100%;
+}
+
+.keep-preview iframe {
+  width: 90%;
+  height: 100%;
+}
+
+.img-container {
+  height: 90%;
+}
 
 .keep-add-container {
-    background-color: white;
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
-    border-radius: 5px;
-    margin-top: 10px;
-    display: flex;
-    justify-content: space-evenly;
+  background-color: white;
+  max-width: 600px;
+  margin: 15px auto;
+  padding: 20px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-evenly;
+  box-shadow: 2px 1px 5px 0px #757272;
 }
 
-.keep-add-container>* {
-    border: none;
-    background-color: transparent;
-    font-size: 1.1rem;
-    opacity: 0.5;
-    cursor: pointer;
-    outline: none;
+.keep-add-container > * {
+  border: none;
+  background-color: transparent;
+  font-size: 1.1rem;
+  opacity: 0.7;
+  cursor: pointer;
+  outline: none;
 }
 
-.keep-add-container>*:hover{
-    opacity: 1;
+.keep-add-container > *:hover {
+  opacity: 1;
 }
 
 .keep-add {
-    text-align: center;
+  text-align: center;
 }
 
 .keep-edit {
-    display: none;
+  display: none;
+  position: absolute;
+  bottom: 5px;
+  width: 100%;
+  justify-content: space-evenly;
+  left: 0;
+}
+
+.keep-edit > * {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  transition: 0.3s;
+  font-size: 1rem;
+  width: 100%;
+}
+
+.keep-edit button:hover {
+  opacity: 0.5;
 }
 
 .keep-preview:hover .keep-edit {
-    display: block;
+  display: flex;
+  justify-content: space-evenly;
 }
 
-.full-opacity{
-    opacity: 1;
+.full-opacity {
+  opacity: 1;
+}
+
+.keeps {
+  display: flex;
+  width: 100%;
+  position: relative;
+}
+
+.keep-column {
+  display: block;
+  flex-basis: 0;
+  -webkit-box-flex: 1;
+  flex-grow: 1;
+  flex-shrink: 1;
+  margin-right: 1.45rem;
+}
+
+.colors-container {
+  position: absolute;
+  z-index: 1;
+  border-radius: 10px;
+  padding: 5px;
+  top: 25px;
+}
+
+.colors-container > * {
+  display: inline-block;
+  height: 20px;
+  width: 20px;
+  margin: 2px;
+  background-color: cornflowerblue;
+  border-radius: 50%;
+  border: 1px solid #00000026;
+}
+
+.keeps-pin {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.keeps-pin > * {
+  flex: 0 0 33.333%;
+  margin-bottom: 30px;
+}
+.keep-filter-search {
+  box-shadow: 0px 1px 5px 0 rgba(60, 64, 67, 0.302),
+    0 1px 3px 1px rgba(60, 64, 67, 0.149);
+  border: none;
+  margin-right: 5px;
+  border-radius: 5px;
+  padding: 7px;
+  outline: none;
+  margin-top: 5px;
+  font-size: 1.2rem;
 }
