--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -81,7 +81,7 @@ body {
 
 .main-nav {
     padding: 15px;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #aeaeae;
 }
 
 .logo {
