--- a/apps/Mail/assets/css/mail-style.css
+++ b/apps/Mail/assets/css/mail-style.css
@@ -2,7 +2,35 @@
     width: 100%;
 }
 
+button{
+    outline: none;
+}
+
 /* mails-section */
+
+.mail-filter {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.mail-filter input {
+    font-size: 1.5rem;
+    box-shadow: 0px 1px 5px 0 rgba(60, 64, 67, 0.302), 0 1px 3px 1px rgba(60, 64, 67, 0.149);
+    border: none;
+    margin-right: 5px;
+    border-radius: 10px;
+    padding: 7px;
+}
+
+.mail-filter .radio-sort {
+    padding: 6px;
+    font-size: 1rem;
+}
+
+.mail-filter .radio-sort input {
+    box-shadow: none;
+}
 
 .mails-container, .mail-data-container {
     width: 80%;
@@ -10,16 +38,49 @@
 }
 
 .mail-preview {
-    border-bottom: 1px solid black;
+    border-bottom: 0.5px solid rgb(200, 198, 198);
     position: relative;
+    color: #4f4f4f;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.mail-preview:hover {
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 5px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+    transition: 0.3s;
+}
+
+
+
+.mail-preview p {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 15ch;
 }
 
 .mail-preview div:not(:last-child) {
-    width: 30%;
+    width: 25%;
+}
+
+.fav-star-starred {
+    padding-right: 15px;
+    color: gold
+}
+
+.fav-star {
+    padding-right: 15px;
+}
+
+.star-btn {
+    background-color: transparent;
+    border: none;
+    outline: none;
+    font-size: 1rem;
+    cursor: pointer;
 }
 
 .mail-list, .mail-list li {
     width: 100%;
+    border-bottom: #ccc;
 }
 
 .mail-list li>* {
@@ -27,7 +88,7 @@
 }
 
 .readen {
-    background-color: #ccc;
+    background-color: #dbdbdb8c;
     font-weight: 400;
 }
 
@@ -50,30 +111,31 @@
     right: 0;
 }
 
-.starred-btn{
+.starred-btn {
     color: gold;
 }
 
 /* COMPOSE SECTION */
 
-.compose-btn{
+.compose-btn {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     font-size: 1rem;
     background-color: #fff;
-    border-radius: 999px;
+    border-radius: 10px;
     cursor: pointer;
-    box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.302),
-    0 1px 3px 1px rgba(60, 64, 67, 0.149);
-}
-.compose-btn:hover{
-    font-weight: bold;
-    background-color: rgb(255, 235, 213);
+    border: none;
+    padding: 5px;
+    box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.302), 0 1px 3px 1px rgba(60, 64, 67, 0.149);
 }
 
-.email-compose {
-    
+.compose-btn:hover {
+    font-weight: bold;
+    background-color: #ccc;
+}
+
+.mail-compose {
     background-color: white;
     z-index: 6;
     position: fixed;
@@ -84,13 +146,17 @@
     height: 80%;
     box-shadow: -2px 3px 7px 0px #aba9a9;
 }
+.mail-compose button {
+ border: none;
+}
+.mail-compose button:hover {
+ opacity: 0.7;
+}
 
-
-
-.email-compose .compose-header {
+.mail-compose .compose-header {
     padding-top: 0;
     padding-bottom: 0;
-    background-color: #404040;
+    background-color: #0e9aa7;
     color: #f4f4f4;
     border-radius: 8px 8px 0px 0px;
 }
@@ -112,12 +178,8 @@
     justify-content: center;
 }
 
-.compose-header button:hover {
-    background-color: rgba(129, 127, 127);
-    color: white;
-}
 
-.email-compose textarea {
+.mail-compose textarea {
     width: 100%;
     outline: none;
     border: none;
@@ -125,7 +187,7 @@
     font-family: tahoma;
 }
 
-.email-compose input {
+.mail-compose input {
     outline: none;
     border: none;
     border-bottom: 1px solid rgb(199, 199, 199);
@@ -143,11 +205,12 @@
     padding: 0.5rem 1rem;
     border-radius: 5px;
     margin-inline-start: 1rem;
-    background-color: #1a73e8;
+    background-color: #0e9aa7;
     color: white;
     cursor: pointer;
+    font-size: 1.2rem;
 }
 
- .compose-footer button:hover {
-    background-color: #1a73e8e8;
+.compose-footer button:hover {
+    background-color: #0e9aa7;
 }
