--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -118,13 +118,14 @@ body {
 .aside-bar-content {
     height: 50%;
     width: 80%;
+    color: rgb(90, 90, 90);
 }
 
 .aside-main-nav {
     text-align: center;
     width: 100%;
     height: 70%;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
 }
 
 .aside-main-nav>* {
@@ -132,6 +133,16 @@ body {
     justify-content: space-evenly;
     width: 100%;
     cursor: pointer;
+    height: 100%;
+    align-items: center;
+    border-radius: 5px;
+    border-radius: 5px 20px 20px 5px;
+    transition: 0.3s;
+}
+
+.aside-main-nav>*:hover {
+    background-color: #ccc;
+    color: rgb(54, 54, 54);
 }
 
 /* Helpers  */
