--- a/apps/Keep/assets/css/keep-style.css
+++ b/apps/Keep/assets/css/keep-style.css
@@ -167,3 +167,17 @@ video {
   margin-top: 5px;
   font-size: 1.2rem;
 }
+.img-btn {
+  color: #020af8;
+}
+
+.add-btn {
+  color: green;
+}
+
+.video-btn {
+  color: #dd0000;
+}
+.todo-btn {
+  color: #ffbc00;
+}
