--- a/assets/css/animation.css
+++ b/assets/css/animation.css
@@ -1,29 +1,78 @@
 .roll-in-blurred-left {
-	        animation: roll-in-blurred-left 0.65s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
+  animation: roll-in-blurred-left 0.65s cubic-bezier(0.23, 1, 0.32, 1) both;
 }
 
- @-webkit-keyframes roll-in-blurred-left {
-    0% {
-              transform: translateX(-1000px) rotate(-720deg);
-              filter: blur(50px);
-      opacity: 0;
-    }
-    100% {
-              transform: translateX(0) rotate(0deg);
-              filter: blur(0);
-      opacity: 1;
-    }
+@-webkit-keyframes roll-in-blurred-left {
+  0% {
+    transform: translateX(-1000px) rotate(-720deg);
+    filter: blur(50px);
+    opacity: 0;
   }
-  @keyframes roll-in-blurred-left {
-    0% {
-              transform: translateX(-1000px) rotate(-720deg);
-              filter: blur(50px);
-      opacity: 0;
-    }
-    100% {
-              transform: translateX(0) rotate(0deg);
-              filter: blur(0);
-      opacity: 1;
-    }
+  100% {
+    transform: translateX(0) rotate(0deg);
+    filter: blur(0);
+    opacity: 1;
   }
-  
+}
+@keyframes roll-in-blurred-left {
+  0% {
+    transform: translateX(-1000px) rotate(-720deg);
+    filter: blur(50px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0) rotate(0deg);
+    filter: blur(0);
+    opacity: 1;
+  }
+}
+
+.roll-in-top {
+  animation: roll-in-top 0.6s ease-out both;
+}
+
+@-webkit-keyframes roll-in-top {
+  0% {
+    transform: translateY(-800px) rotate(-540deg);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0) rotate(0deg);
+    opacity: 1;
+  }
+}
+@keyframes roll-in-top {
+  0% {
+    transform: translateY(-800px) rotate(-540deg);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0) rotate(0deg);
+    opacity: 1;
+  }
+}
+.roll-in-right {
+	        animation: roll-in-right 0.6s ease-out both;
+}
+
+
+ @-webkit-keyframes roll-in-right {
+  0% {
+            transform: translateX(800px) rotate(540deg);
+    opacity: 0;
+  }
+  100% {
+            transform: translateX(0) rotate(0deg);
+    opacity: 1;
+  }
+}
+@keyframes roll-in-right {
+  0% {
+            transform: translateX(800px) rotate(540deg);
+    opacity: 0;
+  }
+  100% {
+            transform: translateX(0) rotate(0deg);
+    opacity: 1;
+  }
+}
