--- a/apps/Keep/assets/css/Modal.css
+++ b/apps/Keep/assets/css/Modal.css
@@ -9,6 +9,7 @@
     top: 0;
     left: 0;
     z-index: 5;
+    cursor: pointer;
 }
 
 .hide {
@@ -16,7 +17,6 @@
 }
 
 .modal-content {
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
     position: relative;
     min-width: 400px;
 }
