--- a/apps/Keep/assets/css/keep-style.css
+++ b/apps/Keep/assets/css/keep-style.css
@@ -4,6 +4,10 @@ button {
   outline: none;
 }
 
+hr{
+  border: 0.5px solid #0e9aa74a
+}
+
 .keep-list {
   columns: 3;
   max-width: 1080px;
@@ -31,6 +35,29 @@ video {
   cursor: pointer;
   margin-bottom: 30px;
   width: 100%;
+  height: 100%;
+}
+
+.modal-content .keep-preview.img,
+.modal-content .keep-preview,
+.modal-content .keep-preview iframe{
+  height: 80%;
+  margin: 0;
+}
+
+.modal-content input{
+  margin-top: 5px;
+  border: none;
+  width: 90%;
+  border-radius: 5px;
+  outline:none;
+  box-shadow: 2px 1px 5px 0px #757272;
+  padding: 10px;
+  font-size: 1rem;
+}
+
+.modal-content{
+  height: 50%;
 }
 
 .keep-preview:hover {
@@ -42,8 +69,9 @@ video {
 }
 
 .keep-preview img {
-  width: 90%;
+  width: 100%;
   height: 100%;
+
 }
 
 .keep-preview iframe {
