--- a/assets/css/animation.css
+++ b/assets/css/animation.css
@@ -52,27 +52,78 @@
   }
 }
 .roll-in-right {
-	        animation: roll-in-right 0.6s ease-out both;
+  animation: roll-in-right 0.6s ease-out both;
 }
 
-
- @-webkit-keyframes roll-in-right {
+@-webkit-keyframes roll-in-right {
   0% {
-            transform: translateX(800px) rotate(540deg);
+    transform: translateX(800px) rotate(540deg);
     opacity: 0;
   }
   100% {
-            transform: translateX(0) rotate(0deg);
+    transform: translateX(0) rotate(0deg);
     opacity: 1;
   }
 }
 @keyframes roll-in-right {
   0% {
-            transform: translateX(800px) rotate(540deg);
+    transform: translateX(800px) rotate(540deg);
     opacity: 0;
   }
   100% {
-            transform: translateX(0) rotate(0deg);
+    transform: translateX(0) rotate(0deg);
+    opacity: 1;
+  }
+}
+.text-focus-in {
+  animation: text-focus-in 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
+}
+
+@-webkit-keyframes text-focus-in {
+  0% {
+    filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    filter: blur(0px);
+    opacity: 1;
+  }
+}
+@keyframes text-focus-in {
+  0% {
+    filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    filter: blur(0px);
+    opacity: 1;
+  }
+}
+.scale-in-hor-right {
+	        animation: scale-in-hor-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+ @-webkit-keyframes scale-in-hor-right {
+  0% {
+            transform: scaleX(0);
+            transform-origin: 100% 100%;
+    opacity: 1;
+  }
+  100% {
+            transform: scaleX(1);
+            transform-origin: 100% 100%;
+    opacity: 1;
+  }
+}
+@keyframes scale-in-hor-right {
+  0% {
+            transform: scaleX(0);
+            transform-origin: 100% 100%;
+    opacity: 1;
+  }
+  100% {
+            transform: scaleX(1);
+            transform-origin: 100% 100%;
     opacity: 1;
   }
 }
