--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -48,6 +48,7 @@ body {
     background-attachment: fixed;
     background-size: cover;
     width: 100%;
+    transition: .3s;
 }
 
 .logo-imgs {
@@ -58,16 +59,36 @@ body {
 .logo-img {
     width: 100px;    
     height: 100px;
-    margin: 50px;
+    margin: 35px;
     /* position: absolute; */
 }
 .logo-gif{
     width: 50px;
     height: 50px;
+    
+}
+
+.logo-container{
+    border-radius: 50px;
+    box-shadow: 0px -1px 7px 2px black;
+    margin: 10px;
+    transition: .3s;
+}
+
+.logo-container:hover{
+    box-shadow: none;
+}
+
+.logoi{
+    font-size: 8rem;
+    color: #8a8989;
 }
 .title-home {
     text-align: center;
-    font-size: 4.5rem;
+    font-size: 6.5rem;
+    font-family: Marck-script, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #373737;
+    margin-bottom: 65px;
 }
 
 .container {
@@ -80,6 +101,10 @@ body {
 
 .main {
     height: 90%;
+}
+
+svg{
+    fill: red;
 }
 
 /* main-nav */
