--- a/apps/Keep/assets/css/keep-style.css
+++ b/apps/Keep/assets/css/keep-style.css
@@ -8,6 +8,13 @@ hr{
   border: 0.5px solid #0e9aa74a
 }
 
+.keep-app{
+  width: 100%;
+  background-image: url('../../../../assets/img/solid-bgi.jpeg');
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
 .keep-list {
   columns: 3;
   max-width: 1080px;
