--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,6 @@
 @import '../../apps/Keep/assets/css/keep-style.css';
 @import '../../apps/Mail/assets/css/mail-style.css';
 @import './animation.css';
-
 * {
     box-sizing: border-box;
 }
@@ -57,32 +56,33 @@ body {
 }
 
 .logo-img {
-    width: 100px;    
+    width: 100px;
     height: 100px;
     margin: 35px;
     /* position: absolute; */
 }
-.logo-gif{
+
+.logo-gif {
     width: 50px;
     height: 50px;
-    
 }
 
-.logo-container{
+.logo-container {
     border-radius: 50px;
     box-shadow: 0px -1px 7px 2px black;
     margin: 10px;
     animation-delay: .8s;
 }
 
-.logo-container:hover{
+.logo-container:hover {
     box-shadow: none;
 }
 
-.logoi{
+.logoi {
     font-size: 8rem;
     color: #8a8989;
 }
+
 .title-home {
     text-align: center;
     font-size: 6.5rem;
@@ -103,7 +103,7 @@ body {
     height: 90%;
 }
 
-svg{
+svg {
     fill: red;
 }
 
@@ -127,15 +127,16 @@ svg{
 }
 
 .nav-links {
-    width: 30%;
+    max-width: 50%;
 }
 
 .nav-links>* {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     color: #0e9aa7;
     font-weight: bold;
     text-decoration: none;
+    margin-left: 20px;
 }
 
 /* Aside-bar */
@@ -158,6 +159,10 @@ svg{
     font-size: 1.2rem;
 }
 
+/* .aside-main-nav .inbox{
+    padding-left: 10px;
+} */
+
 .aside-main-nav .fa-inbox {
     color: green;
 }
@@ -167,10 +172,10 @@ svg{
 }
 
 .aside-main-nav .fa-share-square {
-    color: #020af8; 
-
+    color: #020af8;
 }
-.aside-main-nav .fa-firstdraft{
+
+.aside-main-nav .fa-firstdraft {
     color: #dd0000
 }
 
@@ -181,7 +186,7 @@ svg{
     cursor: pointer;
     height: 100%;
     align-items: center;
-    border-radius: 5px;
+
     border-radius: 5px 20px 20px 5px;
     transition: 0.3s;
 }
@@ -189,6 +194,18 @@ svg{
 .aside-main-nav>*:hover {
     background-color: #ccc;
     color: rgb(54, 54, 54);
+}
+
+.main-mail .screen {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgb(0 0 0 / 60%);
+    z-index: 1;
+    cursor: pointer;
+    transition: opacity 0.8s;
 }
 
 /* Helpers  */
@@ -242,4 +259,71 @@ svg{
 
 .align-center-text {
     text-align: center;
+}
+
+/* MEDIA QUERY */
+
+@media (max-width: 620px) {
+    html {
+        font-size: 14px;
+    }
+    .main-nav {
+        flex-direction: column;
+        align-items: center;
+    }
+    .aside-bar {
+        flex-direction: column;
+        width: 12.5rem;
+        position: absolute;
+        z-index: 99999;
+        background-color: rgba(242, 242, 242, 0.95);
+        height: 100vh;
+        top: 0px;
+        padding: 1rem 0;
+        font-size: 0rem;
+        transform: translateX(-100%);
+        transition: transform 0.8s, box-shadow 0.8s;
+    }
+    .aside-bar.menu-open {
+        transform: translateX(0);
+    }
+    .main-mail {
+        background-size: cover;
+    }
+    .mails-container, .mail-list, .mail-data-container {
+        width: 100%;
+        padding: 0;
+    }
+    .mail-filter {
+        flex-direction: column;
+    }
+    .mobile-menu-btn {
+        display: inline;
+    }
+    .sub-body-container {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .mail-preview .sub-body-container>* {
+        width: 100%;
+    }
+    .mail-preview div:not(:last-child) {
+        width: 100%
+    }
+    .mail-preview .edit-mail {
+        width: 30%;
+    }
+    .sub-body-container h3, .sub-body-container p {
+        margin: 0;
+    }
+    .mail-preview .address-preview {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        max-width: 15ch;
+    }
+    .mail-preview div:first-of-type {
+        overflow: hidden;
+    }
 }
