--- a/apps/Keep/assets/css/keep-style.css
+++ b/apps/Keep/assets/css/keep-style.css
@@ -1,5 +1,4 @@
 @import "./Modal.css";
-
 button {
   cursor: pointer;
   outline: none;
@@ -9,48 +8,41 @@ hr {
   border: 0.5px solid #0e9aa74a;
 }
 
-.keep-app{
+.keep-app {
   width: 100%;
-  background-image: url('../../../../assets/img/solid-bgi.jpeg');
-  background-repeat: no-repeat;
-  background-size: contain;
+  /* background-image: url('../../../../assets/img/solid-bgi.jpeg'); */
+  /* background-repeat: repeat; */
+  /* background-size: cover; */
+  /* background-position: bottom; */
 }
 
 .keep-list {
-  columns: 3;
-  /* max-width: 1080px; */
-  column-gap: 1em;
-  padding-left: 135px;
-  padding-right: 135px;
+  columns: 4;
+  column-gap: 2em;
+  padding-left: 170px;
+  padding-right: 170px;
 }
 
-.keep-list > * {
-  margin: 5px;
-  margin: 30px;
+.keep-list>* {
   display: inline-block;
   margin: 0 0 1em;
   width: 100%;
 }
 
-video {
-  width: 100%;
-}
-
 .keep-preview {
-  border-radius: 5px;
+  border-radius: 2px;
   box-shadow: 1px 3px 5px #7d7f80;
   position: relative;
   transition: 0.4s;
-  padding: 30px;
+  padding: 10px;
+  padding-bottom: 30px;
   cursor: pointer;
   margin-bottom: 30px;
   width: 100%;
   height: 100%;
 }
 
-.modal-content .keep-preview.img,
-.modal-content .keep-preview,
-.modal-content .keep-preview iframe {
+.modal-content .keep-preview.img, .modal-content .keep-preview, .modal-content .keep-preview iframe {
   height: 80%;
   margin: 0;
 }
@@ -58,13 +50,17 @@ video {
 .modal-content input {
   margin-top: 5px;
   border: none;
-  width: 90%;
+  width: 100%;
   border-radius: 5px;
   outline: none;
-  box-shadow: 2px 1px 5px 0px #757272;
-  padding: 10px;
+  /* box-shadow: 2px 1px 5px 0px #757272; */
+  /* padding: 10px; */
   font-size: 1rem;
 }
+.modal-content .keep-edit-details {
+  
+}
+
 
 .modal-content {
   height: 50%;
@@ -88,6 +84,20 @@ video {
   height: 100%;
 }
 
+.keep-details.img {
+  height: 20rem;
+}
+
+.keep-details img {
+  width: 100%;
+  height: 100%;
+}
+
+.keep-details iframe {
+  width: 100%;
+  height: 100%;
+}
+
 .img-container {
   height: 90%;
 }
@@ -103,11 +113,10 @@ video {
   box-shadow: 2px 1px 5px 0px #757272;
 }
 
-.keep-add-container > * {
+.keep-add-container>* {
   border: none;
   background-color: transparent;
   font-size: 1.1rem;
-  /* opacity: 0.7; */
   outline: none;
 }
 
@@ -128,7 +137,21 @@ video {
   left: 0;
 }
 
-.keep-edit > * {
+.keep-edit>* {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  transition: 0.3s;
+  font-size: 1rem;
+  width: 100%;
+}
+
+.keep-edit-details {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.keep-edit-details>* {
   background: transparent;
   border: none;
   cursor: pointer;
@@ -170,10 +193,10 @@ video {
   z-index: 1;
   border-radius: 10px;
   padding: 5px;
-  top: 25px;
+  top: 20px;
 }
 
-.colors-container > * {
+.colors-container>* {
   display: inline-block;
   height: 20px;
   width: 20px;
@@ -188,18 +211,17 @@ video {
   flex-wrap: wrap;
 }
 
-.keeps-pin > * {
+.keeps-pin>* {
   flex: 0 0 33.333%;
   margin-bottom: 30px;
 }
-.Keep-filter{
+
+.Keep-filter {
   margin-bottom: 10px;
 }
 
-.keep-filter-search,
-.keep-sort {
-  box-shadow: 0px 1px 5px 0 rgba(60, 64, 67, 0.302),
-    0 1px 3px 1px rgba(60, 64, 67, 0.149);
+.keep-filter-search, .keep-sort {
+  box-shadow: 0px 1px 5px 0 rgba(60, 64, 67, 0.302), 0 1px 3px 1px rgba(60, 64, 67, 0.149);
   border: none;
   margin-right: 5px;
   border-radius: 5px;
@@ -213,6 +235,7 @@ video {
 .keep-filter-search:focus {
   background-color: rgb(199, 199, 199);
 }
+
 .img-btn {
   color: #020af8;
 }
@@ -224,6 +247,67 @@ video {
 .video-btn {
   color: #dd0000;
 }
+
 .todo-btn {
   color: #ffbc00;
+}
+
+.done-note {
+  text-decoration: line-through;
+}
+
+.btn-pin-list {
+  font-size: 2rem;
+}
+
+.keep-details {
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+}
+
+.keep-details .keep-add .keep-add-container {
+  bottom: 5px;
+  position: absolute;
+  padding: 10px;
+  margin: 0 auto;
+  /* margin-bottom: 5p; */
+  box-shadow: none;
+}
+
+
+
+@media(max-width: 1080px) {
+  .keep-list {
+    columns: 3;
+    padding-left: 100px;
+    padding-right: 100px;
+  }
+  .keep-preview {
+    margin-bottom: 25px;
+  }
+}
+
+@media(max-width: 820px) {
+  .keep-list {
+    columns: 2;
+  }
+}
+
+@media(max-width: 650px) {
+  .keep-list {
+    padding-right: 50px;
+    padding-left: 50px;
+    columns: 1;
+  }
+  .keep-add-container {
+    width: 90%;
+    padding: 10px;
+  }
+  .keep-add-container>* {
+    font-size: 0.9rem;
+  }
+  .keep-filter-search, .keep-sort {
+    font-size: 0.9rem;
+  }
 }
