--- a/apps/Keep/assets/css/keep-style.css
+++ b/apps/Keep/assets/css/keep-style.css
@@ -1,4 +1,20 @@
 @import "./Modal.css";
+html {
+  scroll-behavior: smooth;
+  margin: 0;
+  height: 100%;
+}
+
+.keep-app .container-lists {
+  width: 100%;
+
+}
+
+.container-lists {
+  width: 100%;
+  
+}
+
 button {
   cursor: pointer;
   outline: none;
@@ -14,6 +30,11 @@ hr {
   /* background-repeat: repeat; */
   /* background-size: cover; */
   /* background-position: bottom; */
+}
+
+.type-keep {
+  color: gray;
+  margin: 0;
 }
 
 .keep-list {
@@ -40,6 +61,7 @@ hr {
   margin-bottom: 30px;
   width: 100%;
   height: 100%;
+  max-width: 300px;
 }
 
 .modal-content .keep-preview.img, .modal-content .keep-preview, .modal-content .keep-preview iframe {
@@ -53,14 +75,10 @@ hr {
   width: 100%;
   border-radius: 5px;
   outline: none;
-  /* box-shadow: 2px 1px 5px 0px #757272; */
-  /* padding: 10px; */
   font-size: 1rem;
 }
-.modal-content .keep-edit-details {
-  
-}
 
+.modal-content .keep-edit-details {}
 
 .modal-content {
   height: 50%;
@@ -71,15 +89,26 @@ hr {
 }
 
 .keep-preview.img {
-  height: 15rem;
+  height: 17rem;
 }
 
 .keep-preview img {
   width: 100%;
   height: 100%;
+  /* padding-bottom: 50px; */
+}
+.keep-preview iframe {
+  width: 100%;
+  height: 100%;
+  padding-bottom: 50px;
 }
 
 .keep-preview iframe {
+  width: 90%;
+  height: 100%;
+}
+
+.keep-preview video {
   width: 90%;
   height: 100%;
 }
@@ -89,7 +118,7 @@ hr {
 }
 
 .keep-details img {
-  width: 100%;
+  max-width: 100%;
   height: 100%;
 }
 
@@ -106,7 +135,7 @@ hr {
   background-color: white;
   max-width: 600px;
   margin: 15px auto;
-  padding: 20px;
+  padding: 15px;
   border-radius: 5px;
   display: flex;
   justify-content: space-evenly;
@@ -120,7 +149,15 @@ hr {
   outline: none;
 }
 
-.keep-add-container button:hover {
+.input-search {
+  width: 300px;
+}
+
+.keep-add-container button i:hover {
+  opacity: 0.7;
+}
+
+.keep-add-container button i:active {
   color: black;
 }
 
@@ -149,6 +186,10 @@ hr {
 .keep-edit-details {
   display: flex;
   justify-content: space-evenly;
+  background-color: rgba(252, 252, 252, 0.8);
+  border-radius: 5px;
+  margin-bottom: 5px;
+  padding: 8px;
 }
 
 .keep-edit-details>* {
@@ -260,24 +301,39 @@ hr {
   font-size: 2rem;
 }
 
+.btn-search {
+  border: none;
+  background: transparent;
+}
+
+.fa-search {
+  font-size: 1.2rem;
+}
+
 .keep-details {
   width: 100%;
   height: 100%;
-  padding: 20px;
+  padding: 25px;
 }
 
 .keep-details .keep-add .keep-add-container {
   bottom: 5px;
-  position: absolute;
   padding: 10px;
   margin: 0 auto;
-  /* margin-bottom: 5p; */
   box-shadow: none;
 }
 
+.edit-all-details {
+  position: absolute;
+  bottom: -20px;
+}
 
+.audio-container audio{
+  width: 100%;
+  outline: none;
+}
 
-@media(max-width: 1080px) {
+@media(max-width: 1150px) {
   .keep-list {
     columns: 3;
     padding-left: 100px;
@@ -309,5 +365,19 @@ hr {
   }
   .keep-filter-search, .keep-sort {
     font-size: 0.9rem;
+  }
+  .btn-pin-list {
+    font-size: 1rem;
+  }
+  .keep-add-container {
+    margin: 5px auto;
+    padding: 5px;
+  }
+  .keep-filter-search, .keep-sort {
+    padding: 3px;
+    font-size: 0.8rem;
+  }
+  .input-search {
+    width: 150px;
   }
 }
