--- a/apps/Keep/assets/css/Modal.css
+++ b/apps/Keep/assets/css/Modal.css
@@ -1,6 +1,6 @@
 .modal-wrapper {
     position: fixed;
-    background: rgba(255, 255, 255, 0.5);
+    background: rgb(104 104 104 / 50%);
     display: flex;
     justify-content: center;
     align-items: center;
