--- a/apps/Keep/assets/css/keep-style.css
+++ b/apps/Keep/assets/css/keep-style.css
@@ -101,12 +101,13 @@ hr {
   width: 100%;
   height: 100%;
   padding-bottom: 50px;
+  border: none;
 }
 
-.keep-preview iframe {
+/* .keep-preview iframe {
   width: 90%;
   height: 100%;
-}
+} */
 
 .keep-preview video {
   width: 90%;
