--- a/apps/Keep/assets/css/keep-style.css
+++ b/apps/Keep/assets/css/keep-style.css
@@ -7,12 +7,10 @@ html {
 
 .keep-app .container-lists {
   width: 100%;
-
 }
 
 .container-lists {
   width: 100%;
-  
 }
 
 button {
@@ -26,10 +24,10 @@ hr {
 
 .keep-app {
   width: 100%;
-  /* background-image: url('../../../../assets/img/solid-bgi.jpeg'); */
-  /* background-repeat: repeat; */
-  /* background-size: cover; */
-  /* background-position: bottom; */
+  background-image: url('../../../../assets/img/side-bgi.jpeg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: right;
 }
 
 .type-keep {
@@ -78,8 +76,6 @@ hr {
   font-size: 1rem;
 }
 
-.modal-content .keep-edit-details {}
-
 .modal-content {
   height: 50%;
 }
@@ -97,6 +93,7 @@ hr {
   height: 100%;
   /* padding-bottom: 50px; */
 }
+
 .keep-preview iframe {
   width: 100%;
   height: 100%;
@@ -115,7 +112,7 @@ hr {
 }
 
 .keep-details.img {
-  height: 20rem;
+ justify-content: space-around;
 }
 
 .keep-details img {
@@ -182,6 +179,7 @@ hr {
   transition: 0.3s;
   font-size: 1rem;
   width: 100%;
+  color: black;
 }
 
 .keep-edit-details {
@@ -315,6 +313,8 @@ hr {
   width: 100%;
   height: 100%;
   padding: 25px;
+  display: flex;
+  justify-content: center;
 }
 
 .keep-details .keep-add .keep-add-container {
@@ -325,11 +325,10 @@ hr {
 }
 
 .edit-all-details {
-  position: absolute;
-  bottom: -20px;
+  width: 100%;
 }
 
-.audio-container audio{
+.audio-container audio {
   width: 100%;
   outline: none;
 }
