--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -278,6 +278,28 @@ svg {
     color: rgb(195, 104, 0);
 }
 
+/* NOTIFICATION */
+.notification-box {
+    position: absolute;
+    right: 60px;
+    bottom: 60px;
+    background-color: #c2e5e1;
+
+    border-radius: 5px;
+    box-shadow: 0px 1px 5px 0 rgba(60, 64, 67, 0.302), 0 1px 3px 1px rgba(60, 64, 67, 0.149);
+    padding: 10px;
+}
+
+.notification-box span {
+    position: absolute;
+    right: 0;
+    top: 0;
+    cursor: pointer;
+}
+
+.notification-box h2{
+    color: #4d4d4d;
+}
 
 /* MEDIA QUERY */
 
