--- a/apps/Books/assets/css/book.css
+++ b/apps/Books/assets/css/book.css
@@ -3,15 +3,15 @@
     src: url(../fonts/Luckiest/LuckiestGuy-Regular.ttf);
 }
 
-body{
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
-a{
+a {
     text-decoration: none;
 }
 
-.book-app .books{
+.book-app .books {
     width: 100%;
     background-image: url('../../../../assets/img/solid-bgi.jpeg');
     background-repeat: repeat;
@@ -137,7 +137,7 @@ a{
     color: #113151;
 }
 
-.book-details-pager > *{
+.book-details-pager>* {
     box-shadow: 0px 1px 5px 0 rgba(60, 64, 67, 0.302), 0 1px 3px 1px rgba(60, 64, 67, 0.149);
     border-radius: 5px;
     padding: 7px;
@@ -146,9 +146,14 @@ a{
     transition: 0.3s;
     margin-left: 30px;
     color: #535252;
-
+    transition: .3s;
 }
-.book-details-pager{
+
+.book-details-pager>*:hover{
+    opacity: 0.5;
+}
+
+.book-details-pager {
     margin-top: 10px
 }
 
@@ -173,7 +178,6 @@ a{
     flex-direction: column;
     align-items: center;
 }
-
 
 .book-logo {
     margin-left: 100px;
@@ -224,7 +228,6 @@ a{
     transition: .3s;
 }
 
-
 .btn-add-review {
     box-shadow: 0px 1px 5px 0 rgba(60, 64, 67, 0.302), 0 1px 3px 1px rgba(60, 64, 67, 0.149);
     border-radius: 5px;
@@ -234,9 +237,8 @@ a{
     transition: 0.3s;
     margin-left: 30px;
     color: #535252;
-    border:none;
+    border: none;
     background-color: none;
-   
 }
 
 .btn-add-review:hover {
@@ -266,10 +268,7 @@ a{
     display: none;
 }
 
-.book-search ,
-.book-input-filter,
-.full-name-review,
-.free-text-review{
+.book-search, .book-input-filter, .full-name-review, .free-text-review {
     box-shadow: 0px 1px 5px 0 rgba(60, 64, 67, 0.302), 0 1px 3px 1px rgba(60, 64, 67, 0.149);
     border: none;
     border-radius: 5px;
@@ -279,21 +278,18 @@ a{
     font-size: 1.2rem;
     transition: 0.3s;
     margin-left: 30px;
-  }
-  
-  .book-search:focus,
-  .book-input-filter:focus ,
-  .full-name-review:focus,
-  .free-text-review:focus{
+}
+
+.book-search:focus, .book-input-filter:focus, .full-name-review:focus, .free-text-review:focus {
     background-color: rgb(199, 199, 199);
-  }
-  
-.sale-title{
+}
+
+.sale-title {
     font-size: 3rem;
     margin: 0;
     color: rgb(194, 34, 34);
 }
 
-.currency-title{
+.currency-title {
     margin: 0;
 }
