--- a/apps/Mail/assets/css/mail-style.css
+++ b/apps/Mail/assets/css/mail-style.css
@@ -280,11 +280,12 @@ button {
 }
 
 .mail-data-container h1, .mail-data-container h3 {
-    border-bottom: 1px solid #aeaeae52;
+    
     color: rgb(114, 114, 114);
 }
 
 .mail-data-container h3 {
+    border-bottom: 1px solid #aeaeae52;
     padding: 0 10px;
     font-style: italic;
 }
@@ -314,4 +315,14 @@ button {
     opacity: 0.7;
     background-color: #efe9e996;
     
+}
+
+.keep-btn-su-container{
+    border-bottom: 1px solid #aeaeae52;
+    flex-wrap: wrap-reverse;
+}
+.keep-btn-su-container a{
+    padding: 10px;
+    font-weight: 700;
+    font-size: 1.2rem;
 }
