--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -297,3 +297,14 @@ svg {
 .notification-box h2 {
     color: #4d4d4d;
 }
+
+@media (max-width: 550px) {
+    
+    .logo-img {
+        width: 3.5rem;
+        height: 3.5rem;
+    }
+    .title-home {
+        font-size: 4.5em;
+    }
+}
